Fixed cropper modal for small screen

--- a/frontend/src/utils/EasyCropper.css
+++ b/frontend/src/utils/EasyCropper.css
@@ -1,31 +1,36 @@
 /* Cropper */
 
 .crop-modal {
-  max-width: 100vw;
-  max-height: 100vh;
   width: 100%;
   height: 100%;
+  max-width: 100vw;
+  max-height: 100vh;
   background-color: var(--clr-back-300);
 }
+.crop-modal.MuiBox-root {
+  padding: 0;
+}
 .modal-container {
-  width: 450px;
+  width: 100%;
   height: 100%;
+  max-width: 450px;
   margin: 0 auto;
 }
 
 .cropper-container {
-  height: 90%;
   width: 100%;
-  max-width: 450px;
+  height: 90%;
   max-height: 550px;
+  max-width: 450px;
   margin: 1.5rem auto 0;
 }
 
 .cropper-container--cropper {
-  height: 80%;
-  max-height: 550px;
-  max-width: 450px;
   position: relative;
+  width: 100%;
+  height: 80%;
+  max-width: 450px;
+  max-height: 550px;
 }
 
 .cropper-container--controls {
@@ -123,4 +128,13 @@
 .cropper-range:focus::-moz-range-thumb {
   outline: 2px solid var(--clr-neutral-400);
   outline-offset: 0.125rem;
+}
+
+@media screen and (max-width: 480px) {
+  .cropper-container--controls {
+    padding: 1rem 2rem;
+  }
+  .cropper-buttons-container {
+    padding: 0 1rem;
+  }
 }
